# C-autumn-2022

./: LICENSE  README.md
SparseMatrices/: CMakeLists.txt  Doxyfile  complex_matrix_example.txt  double_matrix_example.txt  example.txt  main.cpp  matrix_example.txt  vector_example.txt
SparseMatrices/ComplexNumber/: CMakeLists.txt  ComplexNumber.cpp  ComplexNumber.h  ComplexNumber.hpp  cof
SparseMatrices/Exceptions/: BadCast.hpp  CMakeLists.txt  DifferentSizes.hpp  FileNotFound.hpp  OutOfRange.hpp  TwoParamsException.hpp  WrongInput.hpp  ZeroDivision.hpp
SparseMatrices/LongNumber/: CMakeLists.txt  LongNumber.cpp  LongNumber.h  LongNumber.hpp
SparseMatrices/Matrix/: CMakeLists.txt  Matrix.hpp
SparseMatrices/Parser/: CMakeLists.txt  Parser.cpp  Parser.hpp
SparseMatrices/RationalNumber/: CMakeLists.txt  RationalNumber.cpp  RationalNumber.h  RationalNumber.hpp
SparseMatrices/Vector/: CMakeLists.txt  Vector.cpp  Vector.h  Vector.hpp
SparseMatrices/html/: BadCast_8hpp_source.html  ComplexNumber_8hpp_source.html  DifferentSizes_8hpp_source.html  LongNumber_8hpp_source.html  Matrix_8hpp_source.html  OutOfRange_8hpp_source.html  Parser_8hpp_source.html  RationalNumber_8hpp_source.html  TwoParamsException_8hpp_source.html  Vector_8hpp_source.html  WrongInput_8hpp_source.html  ZeroDivision_8hpp_source.html  annotated.html  classBadCast-members.html  classBadCast.html  classBadCast__inherit__graph.dot  classBarEnvironment-members.html  classBarEnvironment.html  classBarEnvironment__inherit__graph.dot  classBase-members.html  classBase.html  classBase__inherit__graph.dot  classBiggestIntConvertible-members.html  classBiggestIntConvertible.html  classChildClassWithStreamOperator.html  classChildClassWithStreamOperator__coll__graph.dot  classChildClassWithoutStreamOperator.html  classChildClassWithoutStreamOperator__coll__graph.dot  classCommentTest.html  classCommentTest__coll__graph.dot  classCommonTest-members.html  classCommonTest.html  classCommonTest__coll__graph.dot  classCommonTest__inherit__graph.dot  classComplexNumber-members.html  classComplexNumber.html  classContainerTest-members.html  classContainerTest.html  classContainerTest__inherit__graph.dot  classConversionHelperBase.html  (+1476 more)
SparseMatrices/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_18.js  classes_2.js  classes_3.js  classes_4.js  (+37 more)
SparseMatrices/latex/: annotated.tex  classBadCast.tex  classBadCast.tex.tmp  classBadCast__inherit__graph.dot  classBarEnvironment.tex  classBarEnvironment__inherit__graph.dot  classBase.tex  classBase__inherit__graph.dot  classBiggestIntConvertible.tex  classChildClassWithStreamOperator.tex  classChildClassWithStreamOperator__inherit__graph.dot  classChildClassWithoutStreamOperator.tex  classChildClassWithoutStreamOperator__coll__graph.dot  classCommentTest.tex  classCommentTest__coll__graph.dot  classCommonTest.tex  classCommonTest__coll__graph.dot  classCommonTest__inherit__graph.dot  classComplexNumber.tex  classContainerTest.tex  classContainerTest__inherit__graph.dot  classConversionHelperBase.tex  classConversionHelperBase__inherit__graph.dot  classConversionHelperDerived.tex  classConversionHelperDerived__inherit__graph.dot  classCounter.tex  classCustomFunctionNamingTest.tex  classCustomFunctionNamingTest__inherit__graph.dot  classCustomFunctorNamingTest.tex  classCustomFunctorNamingTest__coll__graph.dot  classCustomIntegerNamingTest.tex  classCustomIntegerNamingTest__coll__graph.dot  classCustomLambdaNamingTest.tex  classCustomLambdaNamingTest__inherit__graph.dot  classCustomStructNamingTest.tex  classCustomStructNamingTest__inherit__graph.dot  classDerivedTest.tex  classDerivedTest__coll__graph.dot  classDetectNotInstantiatedTest.tex  classDetectNotInstantiatedTest__inherit__graph.dot  (+744 more)
SparseMatrices/tests/: ComplexNumberTest.cpp  LongNumberTest.cpp  MatrixTest.cpp  RationalNumberTest.cpp  VectorTest.cpp
